Add my_class_reserve_big and my_class_reserve_small html

--- a/my_class_reserve_big.html
+++ b/my_class_reserve_big.html
@@ -417,235 +417,162 @@
               </div>
             </div>
           </div>
-          <div class="left-popup schedule">
-            <div class="schedule-top">
-              <img src="images/icon-1.svg" />
+          <div class="left-popup reserve">
+            <p class="reserve-title">預訂課程</p>
+            <div class="reserve-action">
+              <div class="reserve-action-select">
+                <select>
+                  <option value="2021/05/13">2021/05/13</option>
+                  <option value="2021/06/13">2021/06/13</option>
+                  <option value="2021/07/13">2021/07/13</option>
+                  <option value="2021/08/13">2021/08/13</option>
+                </select>
+                <div class="arrow"></div>
+              </div>
+
+              <div class="reserve-action-select">
+                <select>
+                  <option value="10:00-11:00">10:00-11:00</option>
+                  <option value="11:00-12:00">11:00-12:00</option>
+                  <option value="12:00-13:00">12:00-13:00</option>
+                  <option value="13:00-14:00">13:00-14:00</option>
+                </select>
+                <div class="arrow"></div>
+              </div>
+
+              <div class="reserve-action-select">
+                <select>
+                  <option value="知識大會堂">知識大會堂</option>
+                  <option value="小班互動課">小班互動課</option>
+                </select>
+                <div class="arrow"></div>
+              </div>
             </div>
-            <div class="schedule-wrapper">
-              <div class="schedule-item">
-                <div class="schedule-item-header">
-                  <p>2021/9/12 星期日</p>
+            <div class="reserve-content">
+              <div class="reserve-item">
+                <div class="reserve-item-left">
+                  <div class="reserve-item-left-line"></div>
                 </div>
-                <div class="schedule-item-course">
-                  <div class="schedule-item-course-left">
-                    <p class="schedule-item-course-left-time">13:30</p>
-                    <div class="schedule-item-course-left-divider"></div>
-                  </div>
-                  <div class="schedule-item-course-right">
-                    <div class="schedule-item-course-right-tag">
-                      <p>一年級</p>
-                      <p>45 mins</p>
-                    </div>
-                    <p class="schedule-item-course-right-name">牛津一對一</p>
-                    <div class="schedule-item-course-right-teacher">
-                      <div class="schedule-item-course-right-teacher-avatar">
-                        <img src="images/teacher_img.png" />
+                <div class="reserve-item-right">
+                  <p class="reserve-item-right-time">10:00</p>
+
+                  <div class="reserve-course">
+                    <div class="reserve-course-info">
+                      <div class="reserve-course-info-image">
+                        <img src="images/course_img.png" />
                       </div>
-                      <p class="schedule-item-course-right-teacher-name">
-                        Diana V.
-                      </p>
+                      <div class="reserve-course-info-content">
+                        <div class="reserve-course-info-content-top">
+                          <p class="reserve-course-info-content-top-type">英</p>
+                          <p class="reserve-course-info-content-top-time">
+                            2021/9/14 10:30
+                          </p>
+                        </div>
+                        <p class="reserve-course-info-content-text">
+                          Conversation About: Meeting New People
+                        </p>
+                        <div class="reserve-course-info-content-teacher">
+                          <div
+                            class="reserve-course-info-content-teacher-avatar"
+                          >
+                            <img src="images/teacher_img.png" />
+                          </div>
+                          <p class="reserve-course-info-content-teacher-name">
+                            Karla C
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="reserve-course-action">
+                      <div class="reserve-course-action-tag">
+                        <p>一年級</p>
+                        <p>45 mins</p>
+                        <p>CCSS</p>
+                        <p>一對四</p>
+                      </div>
+                      <button class="button lg">
+                        <img class="button-icon" src="images/btn_booking.svg" />
+                        <p>預訂課程</p>
+                      </button>
+                    </div>
+                  </div>
+
+                  <div class="reserve-course">
+                    <div class="reserve-course-info">
+                      <div class="reserve-course-info-image">
+                        <img src="images/course_img.png" />
+                      </div>
+                      <div class="reserve-course-info-content">
+                        <div class="reserve-course-info-content-top">
+                          <p class="reserve-course-info-content-top-type">英</p>
+                          <p class="reserve-course-info-content-top-time">
+                            2021/9/14 10:30
+                          </p>
+                        </div>
+                        <p class="reserve-course-info-content-text">
+                          Conversation About: Meeting New People
+                        </p>
+                        <div class="reserve-course-info-content-teacher">
+                          <div
+                            class="reserve-course-info-content-teacher-avatar"
+                          >
+                            <img src="images/teacher_img.png" />
+                          </div>
+                          <p class="reserve-course-info-content-teacher-name">
+                            Karla C
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="reserve-course-action">
+                      <div class="reserve-course-action-tag">
+                        <p>一年級</p>
+                        <p>45 mins</p>
+                        <p>CCSS</p>
+                        <p>一對四</p>
+                      </div>
+                      <button class="button lg">
+                        <img class="button-icon" src="images/btn_cancel.svg" />
+                        <p>取消預訂</p>
+                      </button>
                     </div>
                   </div>
                 </div>
               </div>
 
-              <div class="schedule-item">
-                <div class="schedule-item-header">
-                  <p>2021/9/12 星期日</p>
+              <div class="reserve-item">
+                <div class="reserve-item-left">
+                  <div class="reserve-item-left-line"></div>
                 </div>
-                <div class="schedule-item-course">
-                  <div class="schedule-item-course-left">
-                    <p class="schedule-item-course-left-time">13:30</p>
-                    <div class="schedule-item-course-left-divider"></div>
-                  </div>
-                  <div class="schedule-item-course-right">
-                    <div class="schedule-item-course-right-tag">
-                      <p>一年級</p>
-                      <p>45 mins</p>
-                    </div>
-                    <p class="schedule-item-course-right-name">牛津一對一</p>
-                    <div class="schedule-item-course-right-teacher">
-                      <div class="schedule-item-course-right-teacher-avatar">
-                        <img src="images/teacher_img.png" />
-                      </div>
-                      <p class="schedule-item-course-right-teacher-name">
-                        Diana V.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <div class="schedule-item-course">
-                  <div class="schedule-item-course-left">
-                    <p class="schedule-item-course-left-time">18:30</p>
-                    <div class="schedule-item-course-left-divider"></div>
-                  </div>
-                  <div class="schedule-item-course-right">
-                    <div class="schedule-item-course-right-tag">
-                      <p>一年級</p>
-                      <p>45 mins</p>
-                    </div>
-                    <p class="schedule-item-course-right-name">牛津一對一</p>
-                    <div class="schedule-item-course-right-teacher">
-                      <div class="schedule-item-course-right-teacher-avatar">
-                        <img src="images/teacher_img.png" />
-                      </div>
-                      <p class="schedule-item-course-right-teacher-name">
-                        Diana V.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
+                <div class="reserve-item-right">
+                  <p class="reserve-item-right-time">14:00</p>
 
-              <div class="schedule-item">
-                <div class="schedule-item-header">
-                  <p>2021/9/12 星期日</p>
-                </div>
-                <div class="schedule-item-course">
-                  <div class="schedule-item-course-left">
-                    <p class="schedule-item-course-left-time">13:30</p>
-                    <div class="schedule-item-course-left-divider"></div>
-                  </div>
-                  <div class="schedule-item-course-right">
-                    <div class="schedule-item-course-right-tag">
-                      <p>一年級</p>
-                      <p>45 mins</p>
-                    </div>
-                    <p class="schedule-item-course-right-name">牛津一對一</p>
-                    <div class="schedule-item-course-right-teacher">
-                      <div class="schedule-item-course-right-teacher-avatar">
-                        <img src="images/teacher_img.png" />
+                  <div class="reserve-card" data-is-booked="true">
+                    <div class="reserve-card-booked">
+                      <div class="reserve-card-booked-icon">
+                        <img src="images/clash.svg" />
                       </div>
-                      <p class="schedule-item-course-right-teacher-name">
-                        Diana V.
+                      <p class="reserve-card-booked-text">
+                        本時段已預訂 小班互動課
                       </p>
+                      <button class="button lg">
+                        <img class="button-icon" src="images/btn_cancel.svg" />
+                        <p>取消預訂</p>
+                      </button>
                     </div>
+                    <div class="reserve-card-booking">booking</div>
                   </div>
                 </div>
               </div>
-
-              <div class="schedule-item">
-                <div class="schedule-item-header">
-                  <p>2021/9/12 星期日</p>
-                </div>
-                <div class="schedule-item-course">
-                  <div class="schedule-item-course-left">
-                    <p class="schedule-item-course-left-time">13:30</p>
-                    <div class="schedule-item-course-left-divider"></div>
-                  </div>
-                  <div class="schedule-item-course-right">
-                    <div class="schedule-item-course-right-tag">
-                      <p>一年級</p>
-                      <p>45 mins</p>
-                    </div>
-                    <p class="schedule-item-course-right-name">牛津一對一</p>
-                    <div class="schedule-item-course-right-teacher">
-                      <div class="schedule-item-course-right-teacher-avatar">
-                        <img src="images/teacher_img.png" />
-                      </div>
-                      <p class="schedule-item-course-right-teacher-name">
-                        Diana V.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <div class="schedule-item-course">
-                  <div class="schedule-item-course-left">
-                    <p class="schedule-item-course-left-time">18:30</p>
-                    <div class="schedule-item-course-left-divider"></div>
-                  </div>
-                  <div class="schedule-item-course-right">
-                    <div class="schedule-item-course-right-tag">
-                      <p>一年級</p>
-                      <p>45 mins</p>
-                    </div>
-                    <p class="schedule-item-course-right-name">牛津一對一</p>
-                    <div class="schedule-item-course-right-teacher">
-                      <div class="schedule-item-course-right-teacher-avatar">
-                        <img src="images/teacher_img.png" />
-                      </div>
-                      <p class="schedule-item-course-right-teacher-name">
-                        Diana V.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="schedule-item">
-                <div class="schedule-item-header">
-                  <p>2021/9/12 星期日</p>
-                </div>
-                <div class="schedule-item-course">
-                  <div class="schedule-item-course-left">
-                    <p class="schedule-item-course-left-time">13:30</p>
-                    <div class="schedule-item-course-left-divider"></div>
-                  </div>
-                  <div class="schedule-item-course-right">
-                    <div class="schedule-item-course-right-tag">
-                      <p>一年級</p>
-                      <p>45 mins</p>
-                    </div>
-                    <p class="schedule-item-course-right-name">牛津一對一</p>
-                    <div class="schedule-item-course-right-teacher">
-                      <div class="schedule-item-course-right-teacher-avatar">
-                        <img src="images/teacher_img.png" />
-                      </div>
-                      <p class="schedule-item-course-right-teacher-name">
-                        Diana V.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <div class="schedule-item">
-                <div class="schedule-item-header">
-                  <p>2021/9/12 星期日</p>
-                </div>
-                <div class="schedule-item-course">
-                  <div class="schedule-item-course-left">
-                    <p class="schedule-item-course-left-time">13:30</p>
-                    <div class="schedule-item-course-left-divider"></div>
-                  </div>
-                  <div class="schedule-item-course-right">
-                    <div class="schedule-item-course-right-tag">
-                      <p>一年級</p>
-                      <p>45 mins</p>
-                    </div>
-                    <p class="schedule-item-course-right-name">牛津一對一</p>
-                    <div class="schedule-item-course-right-teacher">
-                      <div class="schedule-item-course-right-teacher-avatar">
-                        <img src="images/teacher_img.png" />
-                      </div>
-                      <p class="schedule-item-course-right-teacher-name">
-                        Diana V.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <div class="schedule-item-course">
-                  <div class="schedule-item-course-left">
-                    <p class="schedule-item-course-left-time">18:30</p>
-                    <div class="schedule-item-course-left-divider"></div>
-                  </div>
-                  <div class="schedule-item-course-right">
-                    <div class="schedule-item-course-right-tag">
-                      <p>一年級</p>
-                      <p>45 mins</p>
-                    </div>
-                    <p class="schedule-item-course-right-name">牛津一對一</p>
-                    <div class="schedule-item-course-right-teacher">
-                      <div class="schedule-item-course-right-teacher-avatar">
-                        <img src="images/teacher_img.png" />
-                      </div>
-                      <p class="schedule-item-course-right-teacher-name">
-                        Diana V.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
+            </div>
+            <div class="reserve-bottom">
+              <p class="reserve-bottom-text">注意事項：</p>
+              <p class="reserve-bottom-text">
+                1. 我們將會為你安排1堂CCSS + 1堂主題課程
+              </p>
+              <p class="reserve-bottom-text">
+                2. 我們將會為你安排1堂CCSS + 1堂主題課程
+              </p>
             </div>
           </div>
         </div>
