Update my_class by rwd

--- a/my_class.html
+++ b/my_class.html
@@ -402,9 +402,9 @@
                 </div>
               </div>
             </div>
-            <button class="button full">
-              <img class="button-icon" src="images/btn_booking.svg" />
-              <p>預定課程</p>
+            <button class="button lg full">
+              <img class="button-icon" src="images/icon.svg" />
+              <p>預訂課程</p>
             </button>
             <div class="banner">
               <div class="banner-image">
@@ -461,8 +461,8 @@
             <span class="lesson-title">9月課程</span>
             <!-- carousel -->
             <div class="lesson-carousel">
-              <div class="carousel-icon md previous"></div>
-              <div class="carousel-icon md next"></div>
+              <div class="carousel-icon xs previous"></div>
+              <div class="carousel-icon xs next"></div>
               <div class="lesson-carousel-content">
                 <div class="lesson-carousel-content-unit">
                   <div class="lesson-carousel-content-unit-item active">
