Update my_class styles by rwd

--- a/my_class.html
+++ b/my_class.html
@@ -629,7 +629,7 @@
                 <p class="lesson-enhance-title-text">本週加強課程</p>
               </div>
               <div class="lesson-enhance-course">
-                <div class="course dark">
+                <div class="course enhance">
                   <div class="course-info">
                     <div class="course-info-content">
                       <div class="course-info-content-status">
@@ -687,7 +687,7 @@
                   </div>
                 </div>
 
-                <div class="course dark">
+                <div class="course enhance">
                   <div class="course-info">
                     <div class="course-info-content">
                       <div class="course-info-content-status">
@@ -774,6 +774,9 @@
                 class="story-content-carousel carousel-icon sm previous"
               ></div>
               <div class="story-content-carousel carousel-icon sm next"></div>
+              <!-- desktop show two story courses -->
+              <!-- under show one story course -->
+              <!-- need to implement by js for carousel -->
               <div class="story-course-wrapper">
                 <div class="story-course">
                   <div class="story-course-image">
