--- a/my_class_schedule.html
+++ b/my_class_schedule.html
@@ -19,7 +19,21 @@
   <body>
     <div class="layout">
       <div class="my-class container">
-        <div class="left">
+        <div class="my-class-header">
+          <div class="my-class-header-item" data-type="schedule">
+            <div class="my-class-header-item-icon">
+              <img src="images/icon.svg" />
+            </div>
+            <p>課程行事曆</p>
+          </div>
+          <div class="my-class-header-item" data-type="reserve">
+            <div class="my-class-header-item-icon">
+              <img src="images/icon.svg" />
+            </div>
+            <p>預訂課程</p>
+          </div>
+        </div>
+        <div id="left" class="left" data-type="schedule">
           <div class="left-wrapper">
             <div class="calendar">
               <span class="calendar-title">課程行事曆</span>
@@ -402,9 +416,9 @@
                 </div>
               </div>
             </div>
-            <button class="button full">
-              <img class="button-icon" src="images/btn_booking.svg" />
-              <p>預定課程</p>
+            <button class="left-button button lg full">
+              <img class="button-icon" src="images/icon.svg" />
+              <p>預訂課程</p>
             </button>
             <div class="banner">
               <div class="banner-image">
@@ -692,8 +706,8 @@
             <span class="lesson-title">9月課程</span>
             <!-- carousel -->
             <div class="lesson-carousel">
-              <div class="carousel-icon md previous"></div>
-              <div class="carousel-icon md next"></div>
+              <div class="carousel-icon xs previous"></div>
+              <div class="carousel-icon xs next"></div>
               <div class="lesson-carousel-content">
                 <div class="lesson-carousel-content-unit">
                   <div class="lesson-carousel-content-unit-item active">
@@ -860,7 +874,7 @@
                 <p class="lesson-enhance-title-text">本週加強課程</p>
               </div>
               <div class="lesson-enhance-course">
-                <div class="course dark">
+                <div class="course enhance">
                   <div class="course-info">
                     <div class="course-info-content">
                       <div class="course-info-content-status">
@@ -918,7 +932,7 @@
                   </div>
                 </div>
 
-                <div class="course dark">
+                <div class="course enhance">
                   <div class="course-info">
                     <div class="course-info-content">
                       <div class="course-info-content-status">
@@ -1005,6 +1019,9 @@
                 class="story-content-carousel carousel-icon sm previous"
               ></div>
               <div class="story-content-carousel carousel-icon sm next"></div>
+              <!-- desktop show two story courses -->
+              <!-- under show one story course -->
+              <!-- need to implement by js for carousel -->
               <div class="story-course-wrapper">
                 <div class="story-course">
                   <div class="story-course-image">
@@ -1078,5 +1095,26 @@
         </div>
       </div>
     </div>
+
+    <script>
+      const headerItems = document.getElementsByClassName(
+        "my-class-header-item"
+      );
+
+      Array.from(headerItems, function (item) {
+        const itemType = item.dataset.type;
+
+        item.addEventListener("click", function () {
+          const leftElement = document.getElementById("left");
+          const leftType = leftElement.dataset.type;
+
+          if (leftType === itemType) {
+            leftElement.dataset.type = "";
+          } else {
+            leftElement.dataset.type = itemType;
+          }
+        });
+      });
+    </script>
   </body>
 </html>
