--- a/my_class_reserve_small.html
+++ b/my_class_reserve_small.html
@@ -1069,6 +1069,7 @@
     </div>
 
     <script>
+      // 有用到 select 要加 classname 'select-tool' 才會套用 nice-select 的樣式
       const elements = document.querySelectorAll(".select-tool");
 
       elements.forEach(function (select) {
@@ -1077,6 +1078,11 @@
     </script>
 
     <script>
+      // 除了裝置寬度外，透過 left 的 data-type 決定顯示 schedule 或 reserve
+      // data-type 為 schedule 顯示 schedule
+      // data-type 為 reserve 顯示 reserve
+      // data-type 為空則都不顯示
+      // 暫時用這方法，套版時可以用其他方法處理
       const headerItems = document.getElementsByClassName(
         "my-class-header-item"
       );
