--- a/update_level.html
+++ b/update_level.html
@@ -52,6 +52,7 @@
     </div>
 
     <script>
+      // 有用到 select 要加 classname 'select-tool' 才會套用 nice-select 的樣式
       const elements = document.querySelectorAll(".select-tool");
 
       elements.forEach(function (select) {
