Add test html to fit header and footer

--- a/my_class_reserve_big.html
+++ b/my_class_reserve_big.html
@@ -12,7 +12,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="css/reboot.css" />
     <link rel="stylesheet" type="text/css" href="css/common.css" />
     <link rel="stylesheet" type="text/css" href="css/my_class.css" />
     <link rel="stylesheet" href="css/nice-select2.css" />
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="layout">
-      <div class="my-class container">
+      <div class="my-class class-container">
         <div class="my-class-header">
           <div class="my-class-header-item" data-type="schedule">
             <div class="my-class-header-item-icon">
