--- a/reserve_class.html
+++ b/reserve_class.html
@@ -12,13 +12,13 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="css/reset.css" />
+    <link rel="stylesheet" type="text/css" href="css/reboot.css" />
     <link rel="stylesheet" type="text/css" href="css/common.css" />
     <link rel="stylesheet" type="text/css" href="css/reserve_class.css" />
   </head>
   <body>
     <div class="layout">
-      <div class="reserve-class container">
+      <div class="reserve-class class-container">
         <p class="reserve-title">預訂課程按鈕狀態</p>
 
         <div class="reserve-course">
